Applied global styles, fixed button left align bugs
- added margin to global styles. it's at .7em because
	- erased margin from
	- added a global style for "alternate header" which can be used
	  as a global class that colors the header an alternate color
	  (black): yet to apply these global styles to more areas in the
	  site.
		- currently applied to value card on about us page
- changed order of stylesheets (App.css, boostrap) to override bootstrap
- removed index.css because it had
   no impact.
- removed import to index.css
- re-centered buttons on home page and apply page with text-align styles
- adjusted margin for aboutus page
- nonprofit apply page: added styling for padding mobile
- student apply page: centered paragraph

--- a/frontend/src/styles/about_us/AboutUs.module.css
+++ b/frontend/src/styles/about_us/AboutUs.module.css
@@ -131,7 +131,7 @@
 /* Should change with Navbar */
 @media screen and (min-width: 700px) {
   .headerText {
-    margin-top: -134px;
+    margin-top: -100px;
   }
 
   .ourMission {
