--- a/frontend/src/styles/apply/NonprofitApply.module.css
+++ b/frontend/src/styles/apply/NonprofitApply.module.css
@@ -1,3 +1,9 @@
+.nonprofitApplyHeader p {
+  text-align: center;
+  margin: 0;
+
+  padding: 0 11%;
+}
 
 .nonprofitApplyHeader h1 {
   text-align: center;
@@ -99,4 +105,5 @@
   .footerDiv {
     margin-top: -420px;
   }
+
 }
