--- a/frontend/src/styles/apply/RoleCard.module.css
+++ b/frontend/src/styles/apply/RoleCard.module.css
@@ -3,7 +3,7 @@
 
 .roleCardTextMain h2 {
   color: #000000;
-  font-size: 50;
+  font-size: 34px;
 }
 
 .roleCard {
