--- a/frontend/src/styles/home/FeaturedProjectCard.module.css
+++ b/frontend/src/styles/home/FeaturedProjectCard.module.css
@@ -1,6 +1,6 @@
 
 #cardContainer {
-  margin-top: 3vw;
+  margin-top: 0px;
   margin-bottom: 3vw;
   display: flex;
   margin-left: 20%;
